--- a/1_snowpark_housing_data_ingest.ipynb
+++ b/1_snowpark_housing_data_ingest.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "132cb7aa",
    "metadata": {},
    "outputs": [],
@@ -46,134 +46,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "461d1e78",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>longitude</th>\n",
-       "      <th>latitude</th>\n",
-       "      <th>housing_median_age</th>\n",
-       "      <th>total_rooms</th>\n",
-       "      <th>total_bedrooms</th>\n",
-       "      <th>population</th>\n",
-       "      <th>households</th>\n",
-       "      <th>median_income</th>\n",
-       "      <th>median_house_value</th>\n",
-       "      <th>ocean_proximity</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>-122.23</td>\n",
-       "      <td>37.88</td>\n",
-       "      <td>41.0</td>\n",
-       "      <td>880.0</td>\n",
-       "      <td>129.0</td>\n",
-       "      <td>322.0</td>\n",
-       "      <td>126.0</td>\n",
-       "      <td>8.3252</td>\n",
-       "      <td>452600.0</td>\n",
-       "      <td>NEAR BAY</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>-122.22</td>\n",
-       "      <td>37.86</td>\n",
-       "      <td>21.0</td>\n",
-       "      <td>7099.0</td>\n",
-       "      <td>1106.0</td>\n",
-       "      <td>2401.0</td>\n",
-       "      <td>1138.0</td>\n",
-       "      <td>8.3014</td>\n",
-       "      <td>358500.0</td>\n",
-       "      <td>NEAR BAY</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>-122.24</td>\n",
-       "      <td>37.85</td>\n",
-       "      <td>52.0</td>\n",
-       "      <td>1467.0</td>\n",
-       "      <td>190.0</td>\n",
-       "      <td>496.0</td>\n",
-       "      <td>177.0</td>\n",
-       "      <td>7.2574</td>\n",
-       "      <td>352100.0</td>\n",
-       "      <td>NEAR BAY</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>-122.25</td>\n",
-       "      <td>37.85</td>\n",
-       "      <td>52.0</td>\n",
-       "      <td>1274.0</td>\n",
-       "      <td>235.0</td>\n",
-       "      <td>558.0</td>\n",
-       "      <td>219.0</td>\n",
-       "      <td>5.6431</td>\n",
-       "      <td>341300.0</td>\n",
-       "      <td>NEAR BAY</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>-122.25</td>\n",
-       "      <td>37.85</td>\n",
-       "      <td>52.0</td>\n",
-       "      <td>1627.0</td>\n",
-       "      <td>280.0</td>\n",
-       "      <td>565.0</td>\n",
-       "      <td>259.0</td>\n",
-       "      <td>3.8462</td>\n",
-       "      <td>342200.0</td>\n",
-       "      <td>NEAR BAY</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   longitude  latitude  housing_median_age  total_rooms  total_bedrooms  \\\n",
-       "0    -122.23     37.88                41.0        880.0           129.0   \n",
-       "1    -122.22     37.86                21.0       7099.0          1106.0   \n",
-       "2    -122.24     37.85                52.0       1467.0           190.0   \n",
-       "3    -122.25     37.85                52.0       1274.0           235.0   \n",
-       "4    -122.25     37.85                52.0       1627.0           280.0   \n",
-       "\n",
-       "   population  households  median_income  median_house_value ocean_proximity  \n",
-       "0       322.0       126.0         8.3252            452600.0        NEAR BAY  \n",
-       "1      2401.0      1138.0         8.3014            358500.0        NEAR BAY  \n",
-       "2       496.0       177.0         7.2574            352100.0        NEAR BAY  \n",
-       "3       558.0       219.0         5.6431            341300.0        NEAR BAY  \n",
-       "4       565.0       259.0         3.8462            342200.0        NEAR BAY  "
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Import Snowpark libraries \n",
     "from snowflake.snowpark.session import Session\n",
@@ -207,25 +83,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "d4b15e07",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(1, 1, 0)\n",
-      "[Row(CURRENT_WAREHOUSE()='LAB_SCIKIT_WH', CURRENT_DATABASE()='SCIKIT_LEARN', CURRENT_SCHEMA()='PUBLIC')]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from snowflake.snowpark import version\n",
     "print(version.VERSION)\n",
     "\n",
     "session = Session.builder.configs(snowflake_conn_prop).create()\n",
-    "session.use_role(\"ACCOUNTADMIN\")\n",
+    "# session.use_role(\"ACCOUNTADMIN\")\n",
     "session.sql(\"create database if not exists  {}\".format(snowflake_conn_prop['database'])).collect()\n",
     "session.use_database(format(snowflake_conn_prop['database']))\n",
     "session.sql(\"create schema if not exists {}\".format(snowflake_conn_prop['schema'])).collect()\n",
@@ -250,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "d974b7ac",
    "metadata": {},
    "outputs": [],
@@ -268,39 +135,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "0426367e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "|\"LONGITUDE\"  |\"LATITUDE\"  |\"HOUSING_MEDIAN_AGE\"  |\"TOTAL_ROOMS\"  |\"TOTAL_BEDROOMS\"  |\"POPULATION\"  |\"HOUSEHOLDS\"  |\"MEDIAN_INCOME\"  |\"MEDIAN_HOUSE_VALUE\"  |\"OCEAN_PROXIMITY\"  |\n",
-      "---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "|-122.23      |37.88       |41.0                  |880.0          |129.0             |322.0         |126.0         |8.3252           |452600.0              |NEAR BAY           |\n",
-      "|-122.22      |37.86       |21.0                  |7099.0         |1106.0            |2401.0        |1138.0        |8.3014           |358500.0              |NEAR BAY           |\n",
-      "|-122.24      |37.85       |52.0                  |1467.0         |190.0             |496.0         |177.0         |7.2574           |352100.0              |NEAR BAY           |\n",
-      "|-122.25      |37.85       |52.0                  |1274.0         |235.0             |558.0         |219.0         |5.6431           |341300.0              |NEAR BAY           |\n",
-      "|-122.25      |37.85       |52.0                  |1627.0         |280.0             |565.0         |259.0         |3.8462           |342200.0              |NEAR BAY           |\n",
-      "|-122.25      |37.85       |52.0                  |919.0          |213.0             |413.0         |193.0         |4.0368           |269700.0              |NEAR BAY           |\n",
-      "|-122.25      |37.84       |52.0                  |2535.0         |489.0             |1094.0        |514.0         |3.6591           |299200.0              |NEAR BAY           |\n",
-      "|-122.25      |37.84       |52.0                  |3104.0         |687.0             |1157.0        |647.0         |3.12             |241400.0              |NEAR BAY           |\n",
-      "|-122.26      |37.84       |42.0                  |2555.0         |665.0             |1206.0        |595.0         |2.0804           |226700.0              |NEAR BAY           |\n",
-      "|-122.25      |37.84       |52.0                  |3549.0         |707.0             |1551.0        |714.0         |3.6912           |261100.0              |NEAR BAY           |\n",
-      "---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "snowpark_df.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "862d9ac2",
    "metadata": {},
    "outputs": [],
