Fixed changes in put_stream due to new version of Snowpark

--- a/1_snowpark_housing_data_ingest.ipynb
+++ b/1_snowpark_housing_data_ingest.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "cd188e46",
    "metadata": {},
@@ -9,6 +10,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "62451bca",
    "metadata": {},
@@ -74,6 +76,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "27447aaa",
    "metadata": {},
@@ -106,6 +109,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "286eb867",
    "metadata": {},
@@ -126,6 +130,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "18fa8967",
    "metadata": {},
