--- a/2_data_exploration_transformation.ipynb
+++ b/2_data_exploration_transformation.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "3b648ee8",
    "metadata": {},
@@ -42,6 +43,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "a1f95920",
    "metadata": {},
@@ -61,6 +63,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "ba1c0c26",
    "metadata": {},
@@ -102,6 +105,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "a6d45181",
    "metadata": {},
@@ -122,6 +126,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "22eefbc4",
    "metadata": {},
@@ -189,6 +194,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "fc67044f",
    "metadata": {},
@@ -311,6 +317,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "4e769489",
    "metadata": {},
@@ -331,6 +338,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "45dbda51",
    "metadata": {},
@@ -373,6 +381,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "25de7ebf",
    "metadata": {},
