--- a/3_snowpark_end_to_end_ml.ipynb
+++ b/3_snowpark_end_to_end_ml.ipynb
@@ -17,6 +17,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -54,6 +55,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -145,6 +147,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -162,6 +165,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -214,16 +218,17 @@
     "  import io\n",
     "  import joblib\n",
     "\n",
-    "  save_path = stage_name + '/' + stage_path\n",
+    "  save_path = stage_name + '/' + stage_path +'/' + file_name\n",
     "  input_stream = io.BytesIO()\n",
     "  input_stream.name = file_name\n",
     "  joblib.dump(object, input_stream)\n",
     "  put_result = snf_session.file.put_stream(input_stream, save_path, overwrite=True)\n",
     "  \n",
-    "  return f'{save_path}/{put_result.target}'"
+    "  return save_path"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -304,6 +309,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -325,6 +331,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -342,6 +349,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -371,6 +379,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -387,6 +396,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -421,6 +431,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -444,11 +455,12 @@
     "def predict_house_value(pd_df: T.PandasDataFrame[float, float, float, float, float, float, float, float\n",
     "                                                 , str]) -> T.PandasSeries[float]:\n",
     "       pd_df.columns = features\n",
-    "       m = read_file('housing_fores_reg.joblib.gz') \n",
+    "       m = read_file('housing_fores_reg.joblib') \n",
     "       return m.predict(pd_df)"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
