--- a/3_snowpark_end_to_end_ml.ipynb
+++ b/3_snowpark_end_to_end_ml.ipynb
@@ -265,8 +265,8 @@
     "\n",
     "    # save the train and test sets as time stamped tables in Snowflake \n",
     "    table_suffix = now.strftime(\"%Y%m%d%H%M%S\")\n",
-    "    train_table_name = training_table + '_TRAIN_' + table_suffix\n",
-    "    test_table_name = training_table + '_TEST_' + table_suffix\n",
+    "    train_table_name = training_table + '_TRAIN'\n",
+    "    test_table_name = training_table + '_TEST'\n",
     "    snowdf_train.write.mode(\"overwrite\").save_as_table(train_table_name)\n",
     "    snowdf_test.write.mode(\"overwrite\").save_as_table(test_table_name)\n",
     "\n",
@@ -477,7 +477,7 @@
    "source": [
     "# to call the udf for inferencing we will use call_function\n",
     "\n",
-    "snowdf_test = session.table(\"HOUSING_TEST\")\n",
+    "snowdf_test = session.table(\"HOUSING_DATA_TEST\")\n",
     "inputs = snowdf_test.drop(\"MEDIAN_HOUSE_VALUE\")\n",
     "                    \n",
     "snowdf_results = snowdf_test.select(*inputs,\n",
