--- a/1_snowpark_housing_data_ingest.ipynb
+++ b/1_snowpark_housing_data_ingest.ipynb
@@ -96,7 +96,7 @@
     "\n",
     "session = Session.builder.configs(snowflake_conn_prop).create()\n",
     "# session.use_role(\"ACCOUNTADMIN\")\n",
-    "session.sql(\"create database if not exists  {}\".format(snowflake_conn_prop['database'])).collect()\n",
+    "session.sql(\"create or replace database  {}\".format(snowflake_conn_prop['database'])).collect()\n",
     "session.use_database(format(snowflake_conn_prop['database']))\n",
     "session.sql(\"create schema if not exists {}\".format(snowflake_conn_prop['schema'])).collect()\n",
     "session.use_schema(format(snowflake_conn_prop['schema']))\n",
