--- a/2_data_exploration_transformation.ipynb
+++ b/2_data_exploration_transformation.ipynb
@@ -26,9 +26,8 @@
    "outputs": [],
    "source": [
     "from snowflake.snowpark.session import Session\n",
-    "import snowflake.snowpark.functions as F\n",
-    "import snowflake.snowpark.types as T\n",
-    "from snowflake.snowpark import version\n",
+    "import snowflake.snowpark.functions as snow_funcs\n",
+    "import snowflake.snowpark.types as snow_types\n",
     "\n",
     "from config import snowflake_conn_prop\n",
     "\n",
@@ -190,7 +189,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "snowpark_df.queries"
+    "list(snowpark_df.queries['queries'])"
    ]
   },
   {
@@ -233,7 +232,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "snowpark_df_subset.queries"
+    "list(snowpark_df_subset.queries['queries'])"
    ]
   },
   {
@@ -252,7 +251,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "snowpark_df_new_col = snowpark_df_subset.with_column('BEDROOM_RATIO', F.col('TOTAL_BEDROOMS') / F.col('TOTAL_ROOMS'))\n",
+    "snowpark_df_new_col = snowpark_df_subset.with_column('BEDROOM_RATIO', snow_funcs.col('TOTAL_BEDROOMS') / snow_funcs.col('TOTAL_ROOMS'))\n",
     "snowpark_df_new_col.show()"
    ]
   },
@@ -263,7 +262,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "snowpark_df_new_col.queries"
+    "snowpark_df_new_col.queries['queries']"
    ]
   },
   {
@@ -302,7 +301,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "snowpark_df_filtered = snowpark_df_drop_col.filter(F.col('OCEAN_PROXIMITY').in_(['INLAND','ISLAND', 'NEAR BAY']))\n",
+    "snowpark_df_filtered = snowpark_df_drop_col.filter(snow_funcs.col('OCEAN_PROXIMITY').in_(['INLAND','ISLAND', 'NEAR BAY']))\n",
     "snowpark_df_filtered.show()"
    ]
   },
@@ -313,7 +312,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "snowpark_df_filtered.queries"
+    "snowpark_df_filtered.queries['queries']"
    ]
   },
   {
@@ -333,7 +332,7 @@
    "outputs": [],
    "source": [
     "# Aggregate data\n",
-    "snowpark_df_agg = snowpark_df_filtered.group_by(['OCEAN_PROXIMITY']).agg([F.avg('HOUSEHOLDS').as_('AVG_HOUSEHOLDS')])\n",
+    "snowpark_df_agg = snowpark_df_filtered.group_by(['OCEAN_PROXIMITY']).agg([snow_funcs.avg('HOUSEHOLDS').as_('AVG_HOUSEHOLDS')])\n",
     "snowpark_df_agg.show()"
    ]
   },
@@ -353,7 +352,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "snowpark_df_sorted = snowpark_df_agg.sort(F.col('AVG_HOUSEHOLDS').asc())\n",
+    "snowpark_df_sorted = snowpark_df_agg.sort(snow_funcs.col('AVG_HOUSEHOLDS').asc())\n",
     "snowpark_df_sorted.show()"
    ]
   },
@@ -399,7 +398,7 @@
    "outputs": [],
    "source": [
     "# Get all numerical columns\n",
-    "numeric_types = [T.DecimalType, T.LongType, T.DoubleType, T.FloatType, T.IntegerType]\n",
+    "numeric_types = [snow_types.DecimalType, snow_types.LongType, snow_types.DoubleType, snow_types.FloatType, snow_types.IntegerType]\n",
     "numeric_columns = [c.name for c in snowpark_df.schema.fields if type(c.datatype) in numeric_types]\n",
     "numeric_columns"
    ]
@@ -412,7 +411,7 @@
    "outputs": [],
    "source": [
     "# Get all categorical columns (columns with character data type)\n",
-    "categorical_types = [T.StringType]\n",
+    "categorical_types = [snow_types.StringType]\n",
     "categorical_columns = [c.name for c in snowpark_df.schema.fields if type(c.datatype) in categorical_types]\n",
     "categorical_columns"
    ]
@@ -519,9 +518,10 @@
     "# First we get the distinct values in column OCEAN_PROXIMITY and the number of rows for each unique value\n",
     "# We are are using pyplot for this visualisation\n",
     "\n",
-    "df_pie = snowpark_df.group_by(\"OCEAN_PROXIMITY\").agg(F.sum('MEDIAN_HOUSE_VALUE').as_('MEDIAN_HOUSE_VALUE')).to_pandas()\n",
+    "df_pie = snowpark_df.group_by(\"OCEAN_PROXIMITY\").agg(snow_funcs.sum('MEDIAN_HOUSE_VALUE').as_('MEDIAN_HOUSE_VALUE')).to_pandas()\n",
     "df_pie.set_index('OCEAN_PROXIMITY', inplace=True)\n",
-    "df_pie.plot.pie(y='MEDIAN_HOUSE_VALUE', figsize=(8,8))"
+    "df_pie.plot.pie(y='MEDIAN_HOUSE_VALUE', figsize=(8,8))\n",
+    "#plt.show()"
    ]
   },
   {
@@ -564,7 +564,7 @@
    "outputs": [],
    "source": [
     "# We will use seaborn lib to plot correlation matrix\n",
-    "sn.heatmap(snowpark_df.to_pandas().corr(), annot=True)\n",
+    "sn.heatmap(snowpark_df[numeric_columns].to_pandas().corr(), annot=True)\n",
     "plt.show()"
    ]
   },
@@ -589,7 +589,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "snowpark_scikit_learn",
    "language": "python",
    "name": "python3"
   },
@@ -603,7 +603,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.10.15"
   }
  },
  "nbformat": 4,
